--- a/app/styles/demo.scss
+++ b/app/styles/demo.scss
@@ -1,28 +1,51 @@
 body {
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
   font-size: 15px;
 }
 
-a
-	{text-decoration: none;}
-
-.row-heading{
-	font-weight: 500;
-	font-size: 0.7em;
-	text-transform: uppercase;}
-
-.timetable .time-label {
-		font-size: 0.8em;
-	font-weight: 500;
+a {
+  text-decoration: none;
 }
 
-.timetable .time-entry.vip-only
-	{
-		background-color: #C490F5;
-	border: 1px solid #6A16B8;
-	&:hover{
+.row-heading {
+  font-weight: 500;
+  font-size: 0.7em;
+  text-transform: uppercase;
+}
 
-		background-color: #AE67F0;
-	}
-	}
+.timetable .time-label {
+  font-size: 0.8em;
+  font-weight: 500;
+}
+
+.timetable .time-entry.vip-only {
+  background-color: #c490f5;
+  border: 1px solid #6a16b8;
+  &:hover {
+    background-color: #ae67f0;
+  }
+}
+
+.item {
+  display: block;
+  border: 2px solid black;
+  background: white;
+  width: 100%;
+  height: 100%;
+  &:hover {
+    border-color: #ae67f0;
+  }
+}
+
+.tooltip {
+  z-index: 100;
+}
+
+.tooltip-arrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 7.5px 10px 7.5px 0;
+  border-color: transparent black transparent transparent;
+}
